--- a/Gulag Manager/Assembly-CSharp.csproj
+++ b/Gulag Manager/Assembly-CSharp.csproj
@@ -53,12 +53,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Gulags\Gulag.cs" />
-     <Compile Include="Assets\Scripts\Buttons\backbutton.cs" />
      <Compile Include="Assets\Scripts\Buttons\button_SFX.cs" />
      <Compile Include="Assets\Scripts\Controlador.cs" />
+     <Compile Include="Assets\Scripts\ControladorGame.cs" />
      <Compile Include="Assets\Scripts\enviar_gulag.cs" />
+     <Compile Include="Assets\Scripts\Estruturas\est_aloj.cs" />
+     <Compile Include="Assets\Scripts\Estruturas\est_med.cs" />
+     <Compile Include="Assets\Scripts\Estruturas\est_recur.cs" />
+     <Compile Include="Assets\Scripts\Estruturas\est_segur.cs" />
+     <Compile Include="Assets\Scripts\Estruturas\Estrutura.cs" />
+     <Compile Include="Assets\Scripts\Gulag.cs" />
      <Compile Include="Assets\Scripts\gulag_info.cs" />
+     <Compile Include="Assets\Scripts\info_gameplay.cs" />
      <Compile Include="Assets\Scripts\resize_img.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
@@ -116,19 +122,19 @@
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/Arthur/Desktop/Gulag Manager/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/luizk/Documents/Gulag Manager Unity/Gulag Manager/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.PackageManagerUI.Editor">
- <HintPath>C:/Users/Arthur/Desktop/Gulag Manager/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+ <HintPath>C:/Users/luizk/Documents/Gulag Manager Unity/Gulag Manager/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>C:/Users/Arthur/Desktop/Gulag Manager/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>C:/Users/luizk/Documents/Gulag Manager Unity/Gulag Manager/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/Arthur/Desktop/Gulag Manager/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/luizk/Documents/Gulag Manager Unity/Gulag Manager/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.DataPrivacy">
- <HintPath>C:/Users/Arthur/Desktop/Gulag Manager/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+ <HintPath>C:/Users/luizk/Documents/Gulag Manager Unity/Gulag Manager/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2018.4.20f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -332,7 +338,7 @@
  <HintPath>C:/Program Files/Unity/Hub/Editor/2018.4.20f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Analytics.StandardEvents">
- <HintPath>C:/Users/Arthur/Desktop/Gulag Manager/Library/PackageCache/com.unity.analytics@3.2.3/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
+ <HintPath>C:/Users/luizk/Documents/Gulag Manager Unity/Gulag Manager/Library/PackageCache/com.unity.analytics@3.2.3/AnalyticsStandardEvents/Unity.Analytics.StandardEvents.dll</HintPath>
  </Reference>
  <Reference Include="netstandard">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2018.4.20f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
