--- a/Gulag Manager/Assembly-CSharp.csproj
+++ b/Gulag Manager/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Scripts\selecionar_gulag.cs" />
      <Compile Include="Assets\Scripts\set_vel.cs" />
      <Compile Include="Assets\Scripts\test_gameplay.cs" />
+     <Compile Include="Assets\Scripts\Upgrades\get_upgrades.cs" />
      <Compile Include="Assets\Scripts\Upgrades\upgrade_info.cs" />
      <Compile Include="Assets\Scripts\Upgrades\upgs_struct.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
